web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-declar-name/strict-mode-parent-async-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,14)
3|    function await() {
 |            ^
